feat: 增加用户注册接口
