# router.go
@@ -6,7 +6,8 @@ import (
 	"github.com/cloudwego/hertz/pkg/app/server"
 	"github.com/hertz-contrib/swagger"
 	swaggerFiles "github.com/swaggo/files"
-	handler "workspace-yikou-ai-go/biz/handler"
+	"workspace-yikou-ai-go/biz/handler"
+	user "workspace-yikou-ai-go/biz/handler/user"
 	_ "workspace-yikou-ai-go/docs"
 )
 
@@ -14,4 +15,8 @@ import (
 func customizedRegister(r *server.Hertz, url func(config *swagger.Config)) {
 	r.GET("/ping", handler.Ping)
 	r.GET("/swagger/*any", swagger.WrapHandler(swaggerFiles.Handler, url))
+	userRoute := r.Group("/user")
+	{
+		userRoute.POST("/register", user.UserRegister)
+	}
 }
